# posh

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  POSH.md  README.md  conformist.nix  conformist.toml  flake.nix  justfile  sweatfile  treefmt.nix  version.env
crates/mosh-ffi/: Cargo.toml  build.rs
crates/mosh-ffi/csrc/: predict_shim.cc  shim.cc
crates/mosh-ffi/src/: lib.rs
crates/mosh-ffi/tests/: characterization.rs  predict_characterization.rs  predict_trace.rs
crates/mosh-ffi/tests/fixtures/: cursor.grid  cursor.in  erase.grid  erase.in  plain.grid  plain.in  predict_never.grid  predict_speculative_always.grid  scroll.in  tabs.grid  tabs.in
crates/posh/: Cargo.toml  build.rs
crates/posh-build/: Cargo.toml
crates/posh-build/src/: lib.rs
crates/posh-proto/: Cargo.toml  build.rs
crates/posh-proto/src/: caps.rs  channel.rs  display.rs  error.rs  frame.rs  lib.rs
crates/posh-proto/src/framesync/: dumpdiff.rs  mod.rs  morphdelta.rs  producer.rs
crates/posh-rec/: Cargo.toml  build.rs
crates/posh-rec/src/: assert.rs  castx.rs  cli.rs  golden.rs  json.rs  lib.rs  main.rs  player.rs  record.rs
crates/posh-rec/tests/: emulation.rs  replay.rs  step.rs  version_provenance.rs
crates/posh-rec/tests/fixtures/: emulation-attributes-vt100.castx  emulation-attributes-vt100.grid
crates/posh-term/: Cargo.toml  build.rs
crates/posh-term/src/: base64.rs  cell.rs  csi.rs  dcs.rs  dump.rs  graphics.rs  inflate.rs  kitty_keys.rs  lib.rs  modes.rs  mouse.rs  osc.rs  parser.rs  png.rs  screen.rs  stub.rs  terminal.rs  wcwidth.rs
crates/posh-term/tests/: extensions.rs  terminal.rs
crates/posh/src/: completions.rs  main.rs  overlay.rs  pty.rs  tailnet.rs  terminfo.rs  util.rs
crates/posh/src/remote/: agent.rs  caps.rs  client.rs  crypto.rs  datagram.rs  diag.rs  display.rs  hostmetrics.rs  kittykeys.rs  mod.rs  palette.rs  perf_probe.rs  predict.rs  relay.rs  scrollview.rs  server.rs  sshwrap.rs  stats.rs  sync.rs
crates/posh/src/remote/framesync/: dumpdiff.rs  mod.rs  morphdelta.rs
crates/posh/src/remote/predict/: evolved.rs  metric.rs  mod.rs  mosh.rs  optimistic.rs  overlay.rs  render.rs  species.rs  test_support.rs
crates/posh/src/session/: client.rs  daemon.rs  ipc.rs  list_table.rs  mod.rs
crates/posh/tests/: session_integration.rs  signal_integration.rs  version_provenance.rs
crates/poshterity/: Cargo.toml  build.rs
crates/poshterity/src/: assert.rs  castx.rs  cli.rs  framereplay.rs  golden.rs  json.rs  lib.rs  main.rs  player.rs  record.rs
crates/poshterity/tests/: emulation.rs  golden_cli.rs  oracle.rs  record.rs  replay.rs  step.rs  version_provenance.rs
crates/poshterity/tests/fixtures/: emulation-attributes-vt100.castx  emulation-attributes-vt100.grid
doc/: posh-client.1.scd  posh-server.1.scd  posh.1.scd  posh.7.scd  poshterity.1.scd
docs/: manual-testing.md  posht.md  wheel-scroll-behavior.md
docs/decisions/: 0001-posh-term-libc-portability.md  0002-wheel-grab-input-transform.md  0003-stream-reassembly-across-reads.md  0004-use-mosh-cxx-ffi-oracle.md  0005-posh-term-no-bce-on-scroll.md  0005-posh-term-no-bce.md  0006-size-the-client-model-to-the-session.md
docs/features/: 0001-unified-host-session-namespace.md  0002-terminal-takeover-and-restore.md  0004-ssh-agent-forwarding.md  0005-client-side-scrollback.md  0006-optimistic-local-echo.md  0007-transport-state-dump.md  0008-escape-to-shell.md  0009-command-palette.md  0010-remote-detached-spawn.md  0011-unified-durable-sessions.md  0012-session-layer-collapse.md  0013-kitty-keyboard-passthrough.md  0014-stable-forwarded-agent-endpoint.md
docs/plans/: 2026-06-11-host-session-namespace-design.md  2026-06-12-ssh-agent-forwarding-design.md  2026-06-16-mosh-characterization-harness-design.md  2026-06-30-unified-session-transport-design.md  2026-06-30-unified-session-transport-impl.md
docs/rfcs/: 0001-target-grammar-and-capability-table.md  0002-scrollback-sync.md  0003-castx-recording-format.md  0004-incremental-frame-sync.md  0005-palette-control-protocol.md  0006-diff-base-integrity.md  0007-evolutionary-echo-metric-vector-and-species-contract.md  0008-unified-session-frame-transport.md  0009-scrollback-stream-separation.md  0010-terminal-query-passthrough.md  0011-multiplexed-datagram-channels.md  0012-session-geometry-on-the-frame.md
macosx/: brew-deps.sh  build.sh
posh-palette/: go.mod  main.go  main_test.go  version.go
posht/: .gitignore  README.md  auto.go  auto_test.go  go.mod  main.go  report.go  root.go  run-remote.sh  test.go  tests_action.go  tests_interactive.go  tests_raw.go  tests_rawkeys.go  tests_rawkeys_test.go  tests_visual.go  version_test.go
scripts/: kittycap.sh  version-merge
src/terminal/: terminaldisplay.cc
src/tests/: mouse-alternate-scroll.test
src/util/: select.h
zz-mosh/: README.md  justfile
zz-mosh/macosx/: osx-xcode.sh  port-deps.sh
zz-mosh/man/: mosh-client.1  mosh.1
zz-mosh/src/frontend/: Makefile.am  predictionlog.cc  predictionlog.h  terminaloverlay.cc  terminaloverlay.h
zz-mosh/src/network/: network.h  timing.h  transportsender.h
zz-mosh/src/tests/: Makefile.am  e2e-test-server
zz-pocs/charm-tui-poc/: .gitignore  README.md  flake.nix  justfile
zz-pocs/charm-tui-poc/host/: Cargo.toml
zz-pocs/charm-tui-poc/host/src/: main.rs
zz-pocs/charm-tui-poc/tui/: go.mod  main.go
