[workspace]
resolver = "2"
members = ["crates/posh-build", "crates/posh-term", "crates/posh", "crates/poshterity", "crates/mosh-ffi"]
# mosh-ffi is the C++ FFI oracle (ADR 0004) — a dev/test crate, not shipped.
# Keep it out of the default build/test (and thus the .#posh derivation, which
# runs cargo build/test with no --workspace); it is gated separately by the
# .#checks.<system>.mosh-ffi flake check (just test-mosh-ffi).
default-members = ["crates/posh-build", "crates/posh-term", "crates/posh", "crates/poshterity"]

[workspace.package]
# NOT the source of truth. The real version is version.env (POSH_VERSION),
# flowed into the crates at build time via each crate's build.rs
# (cargo:rustc-env=POSH_VERSION) and read at runtime as env!("POSH_VERSION").
# Cargo's package.version is mandatory, so this inert placeholder satisfies it
# for every workspace member (version.workspace = true); it is never bumped and
# nothing reads it for the actual version, so it cannot drift. See
# eng-versioning(7).
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/amarbel-llc/mosh"

[profile.release]
lto = "thin"
strip = true
