[package]
name = "posh"
version.workspace = true # inert placeholder; real version flows from version.env (see root Cargo.toml)
description = "Persistent, roaming terminal sessions: a combined Rust rewrite of zmx and mosh"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
posh-term = { path = "../posh-term" }
# `posh rec ...` aliases the standalone posh-rec binary; both call
# posh_rec::cli::run so the replay logic lives in one place.
posh-rec = { path = "../posh-rec" }
libc = "0.2"
# default-features off drops the unused getrandom/rand_core pull-in; key
# generation reads OS entropy directly (remote/crypto.rs fill_random).
aes-gcm = { version = "0.10", default-features = false, features = [
    "aes",
    "alloc",
] }
