[package]
name = "poshterity"
version.workspace = true # inert placeholder; real version flows from version.env (see root Cargo.toml)
description = "Deterministic, step-ratcheted terminal recorder/replayer built on posh-term"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
posh-term = { path = "../posh-term" }
# Shared frame/display protocol (github #75): the deterministic server-frame
# harness drives posh-proto's real codecs (DumpDiff/MorphDelta) over an
# in-memory FrameChannel.
posh-proto = { path = "../posh-proto" }
# Used only by the bin's `record` path (PTY/libc FFI). The lib is
# #![forbid(unsafe_code)] and never touches libc; the recorder lives in the
# bin-only src/record.rs.
libc = "0.2"

[build-dependencies]
# Shared version + git-sha flow-out (github #71). See eng-versioning(7).
posh-build = { path = "../posh-build" }
